tests/error/if_consteval_error_then_block.bz
// error: invalid conversion from '__null_t' to 'int32'
function test()
{
	let _ = if consteval (true) { [ null as int32 ] } else { 0 };
}
